graphql-parser/tests/snapshots/schemas__empty_union.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Union(
                    UnionType {
                        position: Pos(1:1),
                        description: None,
                        name: "UndefinedUnion",
                        directives: [],
                        types: [],
                    },
                ),
            ),
        ],
    },
)
