graphql-parser/tests/snapshots/schemas__extend_enum.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Enum(
                    EnumTypeExtension {
                        position: Pos(1:8),
                        name: "Site",
                        directives: [],
                        values: [
                            EnumValue {
                                position: Pos(2:3),
                                description: None,
                                name: "VR",
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
