graphql-parser/tests/snapshots/schemas__extend_object.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Object(
                    ObjectTypeExtension {
                        position: Pos(1:8),
                        name: "Foo",
                        implements_interfaces: [],
                        directives: [],
                        fields: [
                            Field {
                                position: Pos(2:3),
                                description: None,
                                name: "seven",
                                arguments: [
                                    InputValue {
                                        position: Pos(2:9),
                                        description: None,
                                        name: "argument",
                                        value_type: ListType(
                                            NamedType(
                                                "String",
                                            ),
                                        ),
                                        default_value: None,
                                        directives: [],
                                    },
                                ],
                                field_type: NamedType(
                                    "Type",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
