graphql-parser/tests/snapshots/schemas__fail_onion.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `onion[Name]`\nExpected `schema`, `extend`, `scalar`, `type`, `interface`, `union`, `enum`, `input` or `directive`\n",
    ),
)
